# bibtools

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/bibtools/: __init.py__  formatters.py  json2bibtex.py  pubmed.py  scihub.py  utils.py
