[metadata]
name = bibtools-pkg
version = 0.1.10
author = Florian Malard, PhD
author_email = florian.malard@gmail.com
description = Utils for pubmed, scihub and bibtex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synthaze/bibtools
project_urls =
    Bug Tracker = https://github.com/synthaze/bibtools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/bibtools
python_requires = >=3.7

[options.packages.find]
where = src
